<resources>
    <string name="app_name">MyChatApp</string>
    <string name="title_home">主页</string>
    <string name="title_contact">通讯录</string>
    <string name="title_person">个人</string>

    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="nickname_hint">请输入昵称</string>
    <string name="nickname">昵称</string>
    <string name="empty_hint">不可以有空项</string>
    <string name="confirm_failed">两次输入不一致</string>
    <string name="login_failed">登录失败</string>
    <string name="too_short_hint">密码输入过短，建议三位以上</string>

    <string name="title_activity_splash">MyChatApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
