<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="activity.userlogin">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dp16"
        android:src="@drawable/chat"/>
    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"/>
    <android.support.percent.PercentRelativeLayout
        android:layout_below="@id/app_name"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text1"
            android:layout_width="40dp"
            android:textAlignment="center"
            android:layout_margin="@dimen/dp5"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/username"
            android:textSize="11sp" />
        <EditText
            android:layout_below="@id/text1"
            android:maxLines="1"
            android:inputType="textShortMessage"
            android:id="@+id/input_username"
            android:layout_margin="@dimen/dp8"
            android:layout_centerHorizontal="true"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/input_style"
            app:layout_widthPercent="50%"
            android:textAlignment="center"
            android:hint="请输入用户名"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/text2"
            android:layout_below="@+id/input_username"
            android:layout_margin="@dimen/dp5"
            android:layout_width="30dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/password"
            android:textSize="11sp" />
        <EditText
            android:layout_below="@+id/text2"
            android:maxLines="1"
            android:id="@+id/input_password"
            android:layout_margin="@dimen/dp8"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_width="0dp"
            app:layout_widthPercent="50%"
            android:layout_height="50dp"
            android:background="@drawable/input_style"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:textSize="20dp"/>
        <Button
            android:layout_below="@+id/input_password"
            android:layout_margin="@dimen/dp16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_butt"
            android:background="@drawable/input_style"
            android:textColor="#565de7"
            android:layout_centerHorizontal="true"
            android:text="@string/login"/>
    </android.support.percent.PercentRelativeLayout>
    <TextView
        android:layout_marginRight="@dimen/dp8"
        android:textSize="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="还没有账号?"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/go_sign_up_butt"/>
    <Button
        android:id="@+id/go_sign_up_butt"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:textSize="10dp"
        android:textColor="#4891df"
        android:background="@drawable/input_style"
        android:text="立即注册" />
</RelativeLayout>
