<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="activity.signup"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <ImageView
            android:layout_margin="@dimen/dp16"
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:src="@drawable/chat"/>
        <TextView
            android:id="@+id/english_title"
            android:layout_below="@id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:text="注册 chatApp"/>
        <android.support.percent.PercentRelativeLayout
            android:layout_below="@id/english_title"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <android.support.percent.PercentRelativeLayout
                android:id="@+id/ll1"
                android:layout_margin="@dimen/dp5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="40dp"
                    android:layout_toLeftOf="@+id/sign_up_username"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/dp5"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_centerVertical="true"
                    android:textSize="11dp" />
                <EditText
                    android:maxLines="1"
                    android:id="@+id/sign_up_username"
                    android:layout_margin="@dimen/dp5"
                    android:layout_centerHorizontal="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_style"
                    app:layout_widthPercent="50%"
                    android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:textAlignment="center"
                    android:hint="用户名仅限英文数字"
                    android:textSize="15dp"/>
            </android.support.percent.PercentRelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_margin="@dimen/dp5"
                android:id="@+id/ll2"
                android:layout_below="@id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="40dp"
                    android:layout_toLeftOf="@+id/sign_up_nickname"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/dp5"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:layout_centerVertical="true"
                    android:textSize="11dp" />
                <EditText
                    android:id="@+id/sign_up_nickname"
                    android:maxLines="1"
                    android:layout_margin="@dimen/dp5"
                    android:layout_centerHorizontal="true"
                    android:layout_width="0dp"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_style"
                    app:layout_widthPercent="50%"
                    android:textAlignment="center"
                    android:hint="@string/nickname_hint"
                    android:textSize="15dp"/>
            </android.support.percent.PercentRelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_margin="@dimen/dp5"
                android:id="@+id/ll4"
                android:layout_below="@id/ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="40dp"
                    android:layout_toLeftOf="@+id/sign_up_password"
                    android:textAlignment="center"
                    android:layout_margin="@dimen/dp5"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_centerVertical="true"
                    android:textSize="11dp" />
                <EditText
                    android:maxLines="1"
                    android:id="@+id/sign_up_password"
                    android:layout_margin="@dimen/dp5"
                    android:layout_centerHorizontal="true"
                    android:layout_width="0dp"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_style"
                    app:layout_widthPercent="50%"
                    android:textAlignment="center"
                    android:hint="@string/password_hint"
                    android:textSize="15dp"/>
            </android.support.percent.PercentRelativeLayout>
            <android.support.percent.PercentRelativeLayout
                android:layout_margin="@dimen/dp5"
                android:id="@+id/ll5"
                android:layout_below="@id/ll4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true">
                <EditText
                    android:maxLines="1"
                    android:id="@+id/sign_up_password_confirm"
                    android:layout_margin="@dimen/dp5"
                    android:layout_centerHorizontal="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_style"
                    app:layout_widthPercent="50%"
                    android:inputType="textPassword"
                    android:textAlignment="center"
                    android:hint="请再输入一次密码"
                    android:textSize="15dp"/>
            </android.support.percent.PercentRelativeLayout>
            <Button
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/dp16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_butt"
                android:background="@drawable/input_style"
                android:textColor="#565de7"
                android:layout_centerHorizontal="true"
                android:text="注册"/>
        </android.support.percent.PercentRelativeLayout>
    </RelativeLayout>
